--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="heros-vs-hackers-bc-challenge" >
 	<head>
 		<meta charset="UTF-8">
 		<title>Blocking the chain</title>
 		<script src="./main.bundle.js" type="text/javascript" charset="utf-8" async defer></script>
 	</head>
 	<body>
-		<h1>Everything is ok</h1>
-		<p>This is a message from the emergency broadcast system</p>
-		<ul id="messages"></ul>
+		<div ui-view></div>
 	</body>
 </html>
